--- a/admin.html
+++ b/admin.html
@@ -5,225 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin - Kortes nieuwsartikelen</title>
 
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #ff6b6b 0%, #4ecdc4 100%);
-            min-height: 100vh;
-            padding: 0;
-        }
-
-        /* Navbar */
-        .navbar {
-            background: linear-gradient(135deg, #c41e3a 0%, #a01830 100%);
-            padding: 0 40px;
-            box-shadow: 0 4px 15px rgba(196, 30, 58, 0.3);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-
-        .navbar-content {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            height: 70px;
-        }
-
-        .navbar h1 {
-            color: white;
-            font-size: 1.5em;
-            margin: 0;
-        }
-
-        .navbar-buttons {
-            display: flex;
-            gap: 15px;
-            align-items: center;
-        }
-
-        .navbar-link {
-            color: white;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 8px;
-            transition: all 0.3s ease;
-            font-weight: bold;
-            cursor: pointer;
-            border: none;
-            background: rgba(255, 255, 255, 0.2);
-            font-size: 1em;
-        }
-
-        .navbar-link:hover {
-            background: rgba(255, 255, 255, 0.3);
-            transform: translateY(-2px);
-        }
-
-        .navbar-link.active {
-            background: #4ecdc4;
-            color: white;
-        }
-
-        .navbar-link.active:hover {
-            background: #44a9a0;
-        }
-
-        .container {
-            max-width: 1000px;
-            margin: 40px auto;
-            background: white;
-            border-radius: 15px;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
-            padding: 40px;
-        }
-
-        h2 {
-            color: #c41e3a;
-            margin-bottom: 30px;
-            font-size: 2em;
-            text-align: center;
-        }
-
-        .admin-section {
-            margin-bottom: 40px;
-        }
-
-        .admin-section h3 {
-            color: #c41e3a;
-            margin-bottom: 20px;
-            padding-bottom: 10px;
-            border-bottom: 2px solid #c41e3a;
-            font-size: 1.3em;
-        }
-
-        .button-group {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 20px;
-        }
-
-        .admin-button {
-            padding: 30px;
-            border-radius: 12px;
-            border: none;
-            cursor: pointer;
-            font-size: 1.1em;
-            font-weight: bold;
-            text-align: center;
-            transition: all 0.3s ease;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            gap: 15px;
-            text-decoration: none;
-            color: white;
-        }
-
-        .admin-button:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
-        }
-
-        .admin-button.create {
-            background: linear-gradient(135deg, #c41e3a 0%, #a01830 100%);
-            box-shadow: 0 4px 15px rgba(196, 30, 58, 0.3);
-        }
-
-        .admin-button.create:hover {
-            background: linear-gradient(135deg, #a01830 0%, #8a1629 100%);
-        }
-
-        .admin-button.add {
-            background: linear-gradient(135deg, #4ecdc4 0%, #44a9a0 100%);
-            box-shadow: 0 4px 15px rgba(78, 205, 196, 0.3);
-        }
-
-        .admin-button.add:hover {
-            background: linear-gradient(135deg, #44a9a0 0%, #3a8a80 100%);
-        }
-
-        .admin-button-emoji {
-            font-size: 2em;
-        }
-
-        .admin-button-text {
-            font-size: 1.1em;
-            line-height: 1.4;
-        }
-
-        .login-prompt {
-            text-align: center;
-            padding: 60px 20px;
-            background: #fff5f5;
-            border-radius: 12px;
-            border: 2px solid #c41e3a;
-        }
-
-        .login-prompt h3 {
-            color: #c41e3a;
-            margin-bottom: 20px;
-            font-size: 1.5em;
-        }
-
-        .login-prompt a {
-            display: inline-block;
-            padding: 15px 30px;
-            background: #c41e3a;
-            color: white;
-            text-decoration: none;
-            border-radius: 8px;
-            font-weight: bold;
-            transition: all 0.3s ease;
-            margin-top: 15px;
-        }
-
-        .login-prompt a:hover {
-            background: #a01830;
-            transform: translateY(-2px);
-        }
-
-        .navbar-right {
-            display: flex;
-            gap: 10px;
-            align-items: center;
-        }
-
-        .user-info {
-            color: white;
-            font-size: 0.9em;
-            padding: 0 15px;
-        }
-
-        #userEmail {
-            color: #4ecdc4;
-            font-weight: bold;
-        }
-
-        @media (max-width: 768px) {
-            .button-group {
-                grid-template-columns: 1fr;
-            }
-
-            .navbar-content {
-                flex-wrap: wrap;
-            }
-
-            .navbar-buttons {
-                width: 100%;
-                margin-top: 10px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
