--- a/generateur.html
+++ b/generateur.html
@@ -5,228 +5,7 @@
 <title>Générateur de fiche NL</title>
 <meta name="google-signin-client_id" content="639970630190-dbtusqa5kb93jdthsr3413ms7t235anl.apps.googleusercontent.com">
 
-<style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: linear-gradient(135deg, #ff6b6b 0%, #4ecdc4 100%);
-  min-height: 100vh;
-  padding: 40px 20px;
-}
-
-.container {
-  max-width: 900px;
-  margin: 0 auto;
-  background: white;
-  border-radius: 15px;
-  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
-  padding: 40px;
-}
-
-h1 {
-  color: #c41e3a;
-  text-align: center;
-  margin-bottom: 10px;
-  font-size: 2.5em;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.subtitle {
-  text-align: center;
-  color: #666;
-  margin-bottom: 40px;
-  font-size: 1.1em;
-}
-
-.login-container {
-  max-width: 400px;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.login-box {
-  background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-  padding: 40px;
-  border-radius: 12px;
-  border-left: 5px solid #c41e3a;
-}
-
-.login-box h2 {
-  color: #c41e3a;
-  margin-bottom: 20px;
-  font-size: 1.5em;
-}
-
-.login-box p {
-  color: #666;
-  margin-bottom: 30px;
-  font-size: 0.95em;
-}
-
-.error-message {
-  background: #ffebee;
-  border: 2px solid #ff6b6b;
-  color: #c41e3a;
-  padding: 12px;
-  border-radius: 8px;
-  margin-bottom: 15px;
-  display: none;
-}
-
-.show-error {
-  display: block !important;
-}
-
-.google-signin-container {
-  display: flex;
-  justify-content: center;
-  margin: 20px 0;
-}
-
-.box {
-  background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-  padding: 25px;
-  border-radius: 12px;
-  margin-bottom: 25px;
-  border-left: 5px solid #c41e3a;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.box:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 5px 20px rgba(196, 30, 58, 0.15);
-}
-
-.box h2 {
-  color: #c41e3a;
-  margin-bottom: 15px;
-  font-size: 1.3em;
-}
-
-textarea, input[type="text"], input[type="file"], input[type="date"] {
-  width: 100%;
-  padding: 12px;
-  margin-top: 8px;
-  border: 2px solid #ddd;
-  border-radius: 8px;
-  font-family: 'Segoe UI', sans-serif;
-  font-size: 1em;
-  transition: border-color 0.3s ease;
-}
-
-textarea:focus, input[type="text"]:focus, input[type="file"]:focus, input[type="date"]:focus {
-  outline: none;
-  border-color: #c41e3a;
-  box-shadow: 0 0 0 3px rgba(196, 30, 58, 0.1);
-}
-
-textarea {
-  min-height: 120px;
-  resize: vertical;
-}
-
-h3 {
-  color: #333;
-  margin-top: 15px;
-  margin-bottom: 8px;
-  font-size: 1em;
-}
-
-.button-group {
-  display: flex;
-  gap: 10px;
-  margin-top: 30px;
-}
-
-button {
-  background: linear-gradient(135deg, #c41e3a 0%, #a01830 100%);
-  color: white;
-  padding: 14px 30px;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  font-size: 1.1em;
-  font-weight: bold;
-  transition: all 0.3s ease;
-  box-shadow: 0 4px 15px rgba(196, 30, 58, 0.3);
-  flex: 1;
-}
-
-button:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 6px 20px rgba(196, 30, 58, 0.4);
-  background: linear-gradient(135deg, #a01830 0%, #8a1629 100%);
-}
-
-button:active {
-  transform: translateY(0);
-}
-
-button.secondary {
-  background: linear-gradient(135deg, #4ecdc4 0%, #44a9a0 100%);
-  box-shadow: 0 4px 15px rgba(78, 205, 196, 0.3);
-}
-
-button.secondary:hover {
-  background: linear-gradient(135deg, #44a9a0 0%, #3a8a80 100%);
-  box-shadow: 0 6px 20px rgba(78, 205, 196, 0.4);
-}
-
-h2.output-title {
-  color: #c41e3a;
-  margin-top: 40px;
-  margin-bottom: 15px;
-  font-size: 1.5em;
-  padding-bottom: 10px;
-  border-bottom: 3px solid #c41e3a;
-}
-
-#output {
-  width: 100%;
-  height: 350px;
-  padding: 15px;
-  border: 2px solid #ddd;
-  border-radius: 8px;
-  font-family: 'Courier New', monospace;
-  font-size: 0.9em;
-  background: #f8f9fa;
-  color: #333;
-  resize: vertical;
-}
-
-#output:focus {
-  outline: none;
-  border-color: #c41e3a;
-  box-shadow: 0 0 0 3px rgba(196, 30, 58, 0.1);
-}
-
-#loginContainer {
-  display: block;
-}
-
-#formContainer {
-  display: none;
-}
-
-.user-info {
-  text-align: center;
-  margin-bottom: 20px;
-  padding: 15px;
-  background: #fff;
-  border-radius: 8px;
-  display: none;
-}
-
-.user-info p {
-  color: #333;
-  margin: 5px 0;
-}
-</style>
+<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -505,53 +284,27 @@ function genererFiche() {
 '<meta charset="UTF-8">\n' +
 '<meta name="viewport" content="width=device-width, initial-scale=1.0">\n' +
 '<title>' + titre + '</title>\n' +
-'<style>\n' +
-'* { margin: 0; padding: 0; box-sizing: border-box; }\n' +
-'body { font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(135deg, #ff6b6b 0%, #4ecdc4 100%); min-height: 100vh; padding: 20px; }\n' +
-'.container { max-width: 1000px; margin: 0 auto; background: white; border-radius: 15px; padding: 40px; box-shadow: 0 10px 40px rgba(0,0,0,0.2); }\n' +
-'h1 { color: #c41e3a; text-align: center; margin-bottom: 10px; font-size: 2em; }\n' +
-'.region-date { text-align: center; color: #666; margin-bottom: 30px; font-size: 1.1em; font-weight: bold; }\n' +
-'.article { color: #333; line-height: 1.8; margin: 30px 0; padding: 20px; background: #f8f9fa; border-left: 4px solid #c41e3a; border-radius: 8px; }\n' +
-'h2 { color: #c41e3a; margin-top: 40px; margin-bottom: 20px; border-bottom: 3px solid #c41e3a; padding-bottom: 10px; }\n' +
-'table { border-collapse: collapse; width: 100%; margin-bottom: 30px; font-size: 15px; background-color: #fff; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-radius: 8px; overflow: hidden; }\n' +
-'th { background: linear-gradient(135deg, #c41e3a 0%, #a01830 100%); color: white; padding: 15px; text-align: left; font-weight: bold; }\n' +
-'td { padding: 12px 15px; border-bottom: 1px solid #eee; }\n' +
-'tr:hover { background-color: #f5f7fa; }\n' +
-'button { background: linear-gradient(135deg, #c41e3a 0%, #a01830 100%); color: white; padding: 14px 30px; margin-top: 30px; cursor: pointer; border: none; border-radius: 8px; font-size: 1.05em; font-weight: bold; width: 100%; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(196,30,58,0.3); }\n' +
-'button:hover { transform: translateY(-2px); box-shadow: 0 6px 20px rgba(196,30,58,0.4); }\n' +
-'.hidden { display: none; }\n' +
-'#quizZone { background: #f8f9fa; padding: 25px; border-radius: 8px; border: 2px solid #c41e3a; margin-top: 20px; }\n' +
-'#quizZone p { margin-bottom: 15px; font-size: 1.05em; }\n' +
-'#quizZone input { width: 100%; padding: 10px; margin: 15px 0; border: 2px solid #ddd; border-radius: 6px; font-size: 1em; }\n' +
-'#quizZone input:focus { outline: none; border-color: #c41e3a; }\n' +
-'.progress-container { margin-bottom: 20px; }\n' +
-'.progress-bar { width: 100%; height: 10px; background: #ddd; border-radius: 10px; overflow: hidden; margin-bottom: 8px; }\n' +
-'.progress-fill { height: 100%; background: linear-gradient(90deg, #c41e3a 0%, #ff6b6b 100%); transition: width 0.3s ease; }\n' +
-'.progress-text { text-align: center; font-weight: bold; color: #666; font-size: 0.9em; }\n' +
-'.encouragement { text-align: center; margin: 15px 0; font-size: 1.15em; font-weight: bold; color: #c41e3a; animation: fadeIn 0.5s ease; }\n' +
-'.answer-display { background: linear-gradient(135deg, #e8f5e9 0%, #c8e6c9 100%); border: 2px solid #4caf50; border-radius: 8px; padding: 15px; margin: 15px 0; font-size: 1.05em; font-weight: bold; color: #2e7d32; }\n' +
-'.answer-display strong { color: #1b5e20; }\n' +
-'@keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }\n' +
-'.completion-message { text-align: center; padding: 30px; background: linear-gradient(135deg, #fff5f5 0%, #ffe6e6 100%); border-radius: 10px; border: 2px solid #c41e3a; }\n' +
-'.completion-message p { font-size: 1.2em; margin: 10px 0; color: #333; }\n' +
-'</style>\n' +
+'<link rel="stylesheet" href="styles.css">\n'
 '</head>\n' +
 '<body>\n' +
 '<div class="container">\n' +
-'<h1>' + titre + '</h1>\n' +
-'<p class="region-date">📍 ' + region + ' | 📅 ' + date + '</p>\n' +
+'<div class="fiche-container">\n' +
+'<div class="fiche-header">\n' +
+'<h1 class="fiche-title">' + titre + '</h1>\n' +
+'<p class="fiche-meta">📍 ' + region + ' | 📅 ' + date + '</p>\n' +
+'</div>\n' +
 imageTag + '\n' +
-'<div class="article">' + article + '</div>\n' +
+'<div class="fiche-article">' + article + '</div>\n' +
 '<div id="phase1">\n' +
 '  <h2>📚 Phase 1 : Vocabulaire</h2>\n' +
-'  <table>\n' +
+'  <table class="fiche-table">\n' +
 '    <thead><tr><th>Néerlandais</th><th>DE/HET</th><th>Français</th><th>Exemple</th></tr></thead>\n' +
 '    <tbody>\n' +
 vocabRows_html + '\n' +
 '    </tbody>\n' +
 '  </table>\n' +
 '  <h2>🔤 Verbes</h2>\n' +
-'  <table>\n' +
+'  <table class="fiche-table">\n' +
 '    <thead><tr><th>Verbe</th><th>Type</th><th>Forme</th><th>Sens</th><th>Exemple</th></tr></thead>\n' +
 '    <tbody>\n' +
 verbRows_html + '\n' +
