--- a/revision_heures.html
+++ b/revision_heures.html
@@ -4,259 +4,7 @@
     <meta charset="UTF-8">
     <title>Révision des heures (NL)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #ff6b6b 0%, #4ecdc4 100%);
-            min-height: 100vh;
-            padding: 20px;
-        }
-
-        .navbar {
-            background: linear-gradient(135deg, #c41e3a 0%, #a01830 100%);
-            padding: 0 40px;
-            box-shadow: 0 4px 15px rgba(196, 30, 58, 0.3);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            border-radius: 8px;
-            margin-bottom: 30px;
-        }
-
-        .navbar-content {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            height: 70px;
-        }
-
-        .navbar h1 {
-            color: white;
-            font-size: 1.5em;
-            margin: 0;
-        }
-
-        .navbar-buttons {
-            display: flex;
-            gap: 15px;
-            align-items: center;
-        }
-
-        .navbar-link {
-            color: white;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 8px;
-            transition: all 0.3s ease;
-            font-weight: bold;
-            cursor: pointer;
-            border: none;
-            background: rgba(255, 255, 255, 0.2);
-            font-size: 1em;
-        }
-
-        .navbar-link:hover {
-            background: rgba(255, 255, 255, 0.3);
-            transform: translateY(-2px);
-        }
-
-        .container {
-            max-width: 900px;
-            margin: 0 auto;
-            background: white;
-            border-radius: 15px;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
-            padding: 40px;
-        }
-
-        h1 {
-            color: #c41e3a;
-            text-align: center;
-            margin-bottom: 10px;
-            font-size: 2.5em;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .subtitle {
-            text-align: center;
-            color: #666;
-            margin-bottom: 30px;
-            font-size: 1.1em;
-        }
-
-        .quiz-section {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 30px;
-        }
-
-        .clock-wrapper {
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .time-indicator {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            font-size: 3em;
-            z-index: 10;
-        }
-
-        .clock-container {
-            position: relative;
-            width: 250px;
-            height: 250px;
-        }
-
-        svg {
-            width: 100%;
-            height: 100%;
-            filter: drop-shadow(0 4px 8px rgba(0,0,0,0.15));
-        }
-
-        .controls {
-            background: #e3f2fd;
-            border-left: 4px solid #2196f3;
-            padding: 25px;
-            border-radius: 10px;
-            width: 100%;
-            max-width: 500px;
-        }
-
-        .control-group {
-            margin-bottom: 20px;
-        }
-
-        .control-group label {
-            display: block;
-            font-weight: bold;
-            color: #c41e3a;
-            margin-bottom: 8px;
-        }
-
-        input[type="text"] {
-            width: 100%;
-            padding: 12px;
-            border: 2px solid #ddd;
-            border-radius: 8px;
-            font-size: 1.1em;
-            font-family: 'Segoe UI', sans-serif;
-            transition: border-color 0.3s ease;
-        }
-
-        input[type="text"]:focus {
-            outline: none;
-            border-color: #c41e3a;
-            box-shadow: 0 0 0 3px rgba(196, 30, 58, 0.1);
-        }
-
-        .buttons {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 10px;
-        }
-
-        .btn {
-            padding: 12px 20px;
-            border: none;
-            border-radius: 8px;
-            font-size: 1em;
-            font-weight: bold;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .btn-validate {
-            background: linear-gradient(135deg, #4ecdc4 0%, #44a9a0 100%);
-            color: white;
-            box-shadow: 0 4px 15px rgba(78, 205, 196, 0.3);
-        }
-
-        .btn-validate:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(78, 205, 196, 0.4);
-        }
-
-        .btn-next {
-            background: linear-gradient(135deg, #c41e3a 0%, #a01830 100%);
-            color: white;
-            box-shadow: 0 4px 15px rgba(196, 30, 58, 0.3);
-            grid-column: 1 / -1;
-        }
-
-        .btn-next:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(196, 30, 58, 0.4);
-        }
-
-        .result {
-            margin-top: 20px;
-            padding: 15px;
-            border-radius: 8px;
-            text-align: center;
-            font-weight: bold;
-            min-height: 60px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        .result.correct {
-            background: #c8e6c9;
-            color: #2e7d32;
-            border-left: 4px solid #2e7d32;
-        }
-
-        .result.incorrect {
-            background: #ffcdd2;
-            color: #c62828;
-            border-left: 4px solid #c62828;
-        }
-
-        .result-text {
-            font-size: 1.2em;
-            margin-top: 10px;
-            font-weight: bold;
-        }
-
-        .hint {
-            background: #fff9c4;
-            border-left: 4px solid #fbc02d;
-            padding: 12px;
-            border-radius: 8px;
-            margin-top: 15px;
-            color: #f57f17;
-            font-size: 0.95em;
-        }
-
-        @media (max-width: 600px) {
-            .container {
-                padding: 20px;
-            }
-            h1 {
-                font-size: 1.8em;
-            }
-            .clock-container {
-                width: 200px;
-                height: 200px;
-            }
-            .time-indicator {
-                font-size: 2em;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class="navbar">
