--- a/revision_imparfait.html
+++ b/revision_imparfait.html
@@ -3,119 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Révision Imparfait NL</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #ff6b6b 0%, #4ecdc4 100%);
-            min-height: 100vh;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 1000px;      /* élargi */
-            margin: 40px auto;
-            background: white;
-            border-radius: 15px;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
-            padding: 50px 60px 40px 60px; /* plus d'espace */
-        }
-        h1 {
-            color: #c41e3a;
-            text-align: center;
-            margin-bottom: 10px;
-            font-size: 2.5em;       /* plus grand */
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.08);
-        }
-        .subtitle {
-            text-align: center;
-            color: #666;
-            margin-bottom: 30px;
-            font-size: 1.1em;
-        }
-        .aide-memoire {
-            background: #e3f2fd;
-            border-left: 4px solid #2196f3;
-            padding: 14px 18px;
-            border-radius: 8px;
-            margin: 18px auto 30px auto;
-            color: #1976d2;
-            font-size: 1.15em;      /* un peu plus grand */
-            max-width: 900px;       /* plus large */
-            box-shadow: 0 2px 8px #2196f322;
-        }
-        form label {
-            color: #c41e3a;
-            font-weight: bold;
-            font-size: 1em;
-        }
-        form input[type="number"] {
-            padding: 10px;
-            border: 2px solid #ddd;
-            border-radius: 8px;
-            font-size: 1em;
-            margin-left: 8px;
-            width: 60px;
-        }
-        form input[type="checkbox"] {
-            accent-color: #c41e3a;
-            margin-right: 5px;
-        }
-        .btn {
-            background: linear-gradient(135deg, #c41e3a 0%, #a01830 100%);
-            color: white;
-            border: none;
-            border-radius: 8px;
-            padding: 12px 28px;
-            font-weight: bold;
-            font-size: 1em;
-            cursor: pointer;
-            margin-top: 18px;
-            box-shadow: 0 4px 15px rgba(196, 30, 58, 0.18);
-            transition: all 0.3s;
-        }
-        .btn:hover {
-            background: linear-gradient(135deg, #a01830 0%, #8a1629 100%);
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(196, 30, 58, 0.28);
-        }
-        .question {
-            margin: 35px 0 20px 0;
-            text-align: center;
-        }
-        .question h2 {
-            color: #4ecdc4;
-            font-size: 1.2em;
-            margin-bottom: 10px;
-        }
-        .verbe {
-            color: #c41e3a;
-            font-size: 1.5em;
-            font-weight: bold;
-            margin-bottom: 18px;
-        }
-        .answer {
-            background: #e3f2fd;
-            border-left: 4px solid #2196f3;
-            padding: 14px 18px;
-            border-radius: 8px;
-            margin: 18px auto 10px auto;
-            color: #1976d2;
-            font-size: 1.1em;
-            max-width: 350px;
-            box-shadow: 0 2px 8px #2196f322;
-            text-align: left;
-        }
-        .end-message {
-            text-align: center;
-            color: #4ecdc4;
-            font-size: 1.3em;
-            margin: 30px 0 20px 0;
-        }
-        @media (max-width: 1100px) {
-            .container { padding: 30px 3vw; }
-            .aide-memoire { max-width: 98vw; }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="container">
