--- a/revision_present.html
+++ b/revision_present.html
@@ -4,190 +4,7 @@
     <meta charset="UTF-8">
     <title>Révision du présent (NL)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #ff6b6b 0%, #4ecdc4 100%);
-            min-height: 100vh;
-            padding: 20px;
-        }
-
-        .navbar {
-            background: linear-gradient(135deg, #c41e3a 0%, #a01830 100%);
-            padding: 0 40px;
-            box-shadow: 0 4px 15px rgba(196, 30, 58, 0.3);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            border-radius: 8px;
-            margin-bottom: 30px;
-        }
-
-        .navbar-content {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            height: 70px;
-        }
-
-        .navbar h1 {
-            color: white;
-            font-size: 1.5em;
-            margin: 0;
-        }
-
-        .navbar-buttons {
-            display: flex;
-            gap: 15px;
-            align-items: center;
-        }
-
-        .navbar-link {
-            color: white;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 8px;
-            transition: all 0.3s ease;
-            font-weight: bold;
-            cursor: pointer;
-            border: none;
-            background: rgba(255, 255, 255, 0.2);
-            font-size: 1em;
-        }
-
-        .navbar-link:hover {
-            background: rgba(255, 255, 255, 0.3);
-            transform: translateY(-2px);
-        }
-
-        .container {
-            max-width: 900px;
-            margin: 0 auto;
-            background: white;
-            border-radius: 15px;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
-            padding: 40px;
-        }
-
-        h1 {
-            color: #c41e3a;
-            text-align: center;
-            margin-bottom: 10px;
-            font-size: 2.5em;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .subtitle {
-            text-align: center;
-            color: #666;
-            margin-bottom: 30px;
-            font-size: 1.1em;
-        }
-
-        .memory {
-            background: #fffbe7;
-            border-left: 4px solid #ffd600;
-            padding: 15px;
-            border-radius: 8px;
-            margin-bottom: 25px;
-            color: #bfa100;
-            font-weight: 500;
-        }
-
-        .memory strong { color: #f57f17; }
-        .memory u { text-decoration: underline; }
-
-        .quiz-box {
-            background: #e3f2fd;
-            border-left: 4px solid #2196f3;
-            padding: 25px;
-            border-radius: 10px;
-            margin-bottom: 30px;
-            min-height: 150px;
-        }
-
-        .quiz-box div {
-            font-size: 1.1em;
-            margin-bottom: 15px;
-        }
-
-        .type-label {
-            font-weight: bold;
-            color: #2196f3;
-            background: rgba(33, 150, 243, 0.1);
-            padding: 5px 10px;
-            border-radius: 5px;
-            display: inline-block;
-        }
-
-        .quiz-box ul {
-            margin-left: 20px;
-            margin-top: 15px;
-            line-height: 2;
-        }
-
-        .quiz-box li {
-            font-size: 1em;
-        }
-
-        .quiz-box span {
-            font-weight: bold;
-            color: #c41e3a;
-        }
-
-        .btn {
-            background: linear-gradient(135deg, #4ecdc4 0%, #44a9a0 100%);
-            color: white;
-            border: none;
-            border-radius: 8px;
-            padding: 12px 30px;
-            font-size: 1.1em;
-            font-weight: bold;
-            cursor: pointer;
-            margin-top: 20px;
-            transition: all 0.3s ease;
-            box-shadow: 0 4px 15px rgba(78, 205, 196, 0.3);
-        }
-
-        .btn:hover {
-            background: linear-gradient(135deg, #44a9a0 0%, #3a8a80 100%);
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(78, 205, 196, 0.4);
-        }
-
-        .result {
-            font-size: 1.1em;
-            margin-top: 20px;
-            padding: 15px;
-            border-radius: 8px;
-        }
-
-        .advice {
-            color: #c41e3a;
-            font-weight: bold;
-            background: #ffebee;
-            padding: 15px;
-            border-radius: 8px;
-            border-left: 4px solid #c41e3a;
-        }
-
-        @media (max-width: 600px) {
-            .container {
-                padding: 20px;
-            }
-            h1 {
-                font-size: 1.8em;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class="navbar">
