--- a/revision_present.html
+++ b/revision_present.html
@@ -30,7 +30,7 @@
             Chargement...
         </div>
 
-        <button class="btn" id="nextBtn" onclick="voirReponse()">Voir la réponse</button>
+        <button class="btn btn-primary" id="nextBtn" onclick="voirReponse()">Voir la réponse</button>
         <div class="result" id="result"></div>
     </div>
 
