--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
 
     <!-- Section Carte des articles -->
     <div class="section">
-        <h2>🗺️ Carte des articles</h2>
+        <h2>🗺️ Kies een artikel door op een stad op de kaart te klikken.</h2>
         <div id="map" style="width:100%;max-width:600px;height:400px;margin:auto;border-radius:12px;overflow:hidden;"></div>
     </div>
 </div>
