--- a/revision_present.html
+++ b/revision_present.html
@@ -114,9 +114,9 @@
                 <div>
                     <span class="type-label">${typeCourant.toUpperCase()}</span>
                 </div>
-                <div>
-                    <b>Infinitif :</b> ${courant.infinitif}
-                </div>
+              <div style="font-size: 1.5em; font-weight: bold; color: var(--primary); margin: 20px 0; padding: 15px; background-color: var(--bg-light); border-left: 4px solid var(--primary); border-radius: 4px;">
+    ${courant.infinitif}
+</div>
                 <ul>
                     <li><b>ik</b> : <span id="rep_ik">______</span></li>
                     <li><b>jij/hij/ze</b> : <span id="rep_jij">______</span></li>
